16_subseq/grade.txt
Grading at Mon Oct 22 23:14:34 UTC 2018
Attempting to compile maxSeq.c 
maxSeq.c:1:1: error: unknown type name ‘size_t’
 size_t maxSeq(int* array, size_t n) {
 ^
maxSeq.c:1:27: error: unknown type name ‘size_t’
 size_t maxSeq(int* array, size_t n) {
                           ^
The code did not compile!

Overall Grade: F
